Fix pure-Arrow peak off-heap reporting; update TEST_RESULTS.md with real benchmark numbers A-G
Agent-Logs-Url: https://github.com/balchua/java-arrow-pain/sessions/7f33064c-6910-4d98-9998-8116d0226bcf

Co-authored-by: balchua <28750768+balchua@users.noreply.github.com>