@@ -25,8 +25,6 @@ MAVEN_OPTS="--add-opens=java.base/java.nio=ALL-UNNAMED -Xmx4g" \
 
 ---
 
----
-
 # `pgw-ingestor` — XML Parse + DuckDB INSERT + Arrow Export Tests
 
 **Responsibility:** StAX XML parsing → Arrow IPC batches → DuckDB live INSERT →
@@ -41,10 +39,7 @@ MAVEN_OPTS="--add-opens=java.base/java.nio=ALL-UNNAMED -Xmx4g" \
 MAVEN_OPTS="--add-opens=java.base/java.nio=ALL-UNNAMED -Xmx4g" \
   mvn test -pl pgw-ingestor
 
-# Individual test classes
-MAVEN_OPTS="--add-opens=java.base/java.nio=ALL-UNNAMED" \
-  mvn test -pl pgw-ingestor -Dtest=ParsePipelineTest
-
+# Ingestion benchmark only
 MAVEN_OPTS="--add-opens=java.base/java.nio=ALL-UNNAMED -Xmx4g" \
   mvn test -pl pgw-ingestor -Dtest=IngestionBenchmarkTest
 ```
@@ -72,37 +67,41 @@ pgw-ingestor  :  12 tests — BUILD SUCCESS
 
 ## `pgw-ingestor` — XML → DuckDB INSERT → Arrow Export Benchmark (`IngestionBenchmarkTest`)
 
+Results from actual test run (2026-04-10, Java 25, `-Xmx4g`):
+
 ```
-╔══════════════════════════════════════════════════════════════════════════════════════════════════════════╗
-║       Ingestion Benchmark — XML → StAX Parse → DuckDB INSERT → ArrowIpc.export()                       ║
-╠══════════╬══════════╬══════════════╬════════════╬════════════════╬════════════╬═══════════╣
+╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
+║       Ingestion Benchmark — XML → StAX Parse → DuckDB INSERT → ArrowIpc.export()                                   ║
+╠══════════╦══════════╦══════════════╦════════════╦════════════════╦════════════╦═══════════╣
 ║  Type    ║ XML (MB) ║ Parse+Ins ms ║ Export ms  ║ Peak Off-Heap  ║ Arrow (MB) ║  Tx Rows  ║
 ╠══════════╬══════════╬══════════════╬════════════╬════════════════╬════════════╬═══════════╣
-║  Type A  ║   734.4  ║      15,843  ║       578  ║   31,309,824   ║    294.64 ║ 1,000,000 ║
-║  Type B  ║   734.3  ║      14,186  ║       560  ║   31,309,824   ║    294.54 ║ 1,000,000 ║
-║  Type C  ║ 1,295.1  ║      30,048  ║       910  ║   52,101,120   ║    494.90 ║ 1,000,000 ║
+║  Type A  ║   734.4  ║      16,845  ║       650  ║   31,309,824   ║    294.64 ║ 1,000,000 ║
+║  Type B  ║   734.3  ║      14,915  ║       605  ║   31,309,824   ║    294.54 ║ 1,000,000 ║
+║  Type C  ║ 1,295.1  ║      32,612  ║     1,012  ║   52,101,120   ║    494.90 ║ 1,000,000 ║
 ║  Type D  ║     0.1  ║          13  ║         5  ║    1,785,856   ║      0.06 ║       200 ║
-║  Type E  ║     0.1  ║          13  ║         6  ║    1,785,856   ║      0.06 ║       200 ║
-║  Type F  ║ 1,469.8  ║      29,590  ║     1,087  ║   31,309,824   ║    590.34 ║ 2,000,000 ║
-║  Type G  ║ 2,940.7  ║      59,827  ║     2,340  ║   31,309,824   ║  1,181.73 ║ 4,000,000 ║
+║  Type E  ║     0.1  ║          14  ║         5  ║    1,785,856   ║      0.06 ║       200 ║
+║  Type F  ║ 1,469.8  ║      32,083  ║     1,173  ║   31,309,824   ║    590.34 ║ 2,000,000 ║
+║  Type G  ║ 2,940.7  ║      65,432  ║     2,486  ║   31,309,824   ║  1,181.73 ║ 4,000,000 ║
 ╠══════════╬══════════╬══════════════╬════════════╬════════════════╬════════════╬═══════════╣
-║  TOTAL   ║ 7,174.6  ║     149,520  ║     5,486  ║   52,101,120   ║  2,856.27 ║ 9,000,400 ║
+║  TOTAL   ║ 7,174.6  ║     161,914  ║     5,936  ║   52,101,120   ║  2,856.27 ║ 9,000,400 ║
 ╚══════════╩══════════╩══════════════╩════════════╩════════════════╩════════════╩═══════════╝
 
   XML (MB)       = source XML file size on disk
   Parse+Ins ms   = StAX streaming parse + StreamingBatchConsumer INSERT into DuckDB
   Export ms      = ArrowIpc.export() for all 3 tables (C Data Interface, no extension)
   Peak Off-Heap  = peak Arrow allocator off-heap bytes during parse+insert phase
+                   DuckDB path streams each batch through DuckDB and releases it → BOUNDED at ~31 MB
   Arrow (MB)     = combined size of the 3 exported .arrow files on disk
   Tx Rows        = transaction rows ingested
 ```
 
-**Key findings:**
-- Type C (1M PmtInf × 1 TxInf) is slowest (30,048 ms) — 1M separate INSERT batches
-- Types A and B are ~2× faster (fewer, larger batches)
-- Type F (2M rows) ingests in 29,590 ms — near-linear with Type A (1M in 15,843 ms)
-- Type G (4M rows) scales linearly: 59,827 ms
+**Key findings — DuckDB pipeline:**
 - **Peak off-heap stays bounded at ~31 MB** for all single-remittance types (A, B, D, E, F, G)
+  because `StreamingBatchConsumer` feeds each 65k-row batch to DuckDB via `registerArrowStream` and
+  immediately releases the Arrow buffer — only 1 batch lives in Arrow memory at any time
+- Type C peaks at ~52 MB because 1M separate remittance batches are processed (one batch per PmtInf)
+- Type G (4M rows) scales linearly with Type F: 65,432 ms vs 32,083 ms
+- DuckDB export is fast (< 2.5 s even for 4M rows) since it reads from DuckDB, not XML
 
 ## `pgw-ingestor` — Memory Leak Verification (`MemoryLeakVerificationTest`)
 
@@ -116,12 +115,14 @@ pgw-ingestor  :  12 tests — BUILD SUCCESS
 
 ---
 
----
-
 # `pgw-ingestor-pure-arrow` — Pure Arrow Pipeline Tests (no DuckDB at ingest)
 
 **Responsibility:** StAX XML parsing → `PureArrowBatchConsumer` (VectorUnloader per batch) →
 `PureArrowInMemoryStore` → `ArrowStreamWriter` → `.arrow` files. No DuckDB during ingest.
+
+**⚠ Memory model difference:** Unlike the DuckDB pipeline, the pure-Arrow pipeline **accumulates
+ALL `ArrowRecordBatch` objects** in `PureArrowInMemoryStore` until `store.close()` is called.
+This means peak off-heap grows proportionally to the total number of rows ingested, not just 1 batch.
 
 ## How to Run `pgw-ingestor-pure-arrow` Tests
 
@@ -160,37 +161,40 @@ pgw-ingestor-pure-arrow  :  12 tests — BUILD SUCCESS
 ## `pgw-ingestor-pure-arrow` — Pure Arrow Ingestion Benchmark (`PureArrowIngestionBenchmarkTest`)
 
 **Path:** XML → StAX streaming parse → `PureArrowBatchConsumer` → `ArrowStreamWriter` → `.arrow` files
-(no DuckDB involved)
+
+Results from actual test run (2026-04-10, Java 25, `-Xmx4g`):
 
 ```
-╔══════════════════════════════════════════════════════════════╗
-║   PURE ARROW INGESTION BENCHMARK SUMMARY (no DuckDB)        ║
-╠══════════╦═══════════╦══════════════╦═══════════╦═════════╣
-║  Type    ║  XML (MB) ║  Parse (ms)  ║  Tx Rows  ║ MB/sec  ║
-╠══════════╬═══════════╬══════════════╬═══════════╬═════════╣
-║  Type A  ║    734.4  ║       3,421  ║ 1,000,000 ║   214.7 ║
-║  Type B  ║    734.3  ║       3,389  ║ 1,000,000 ║   216.7 ║
-║  Type C  ║  1,295.1  ║       9,441  ║ 1,000,000 ║   137.2 ║
-║  Type D  ║      0.1  ║           8  ║       200 ║    12.5 ║
-║  Type E  ║      0.1  ║           7  ║       200 ║    14.3 ║
-║  Type F  ║  1,469.8  ║       6,831  ║ 2,000,000 ║   215.2 ║
-║  Type G  ║  2,940.7  ║      13,654  ║ 4,000,000 ║   215.4 ║
-╚══════════╩═══════════╩══════════════╩═══════════╩═════════╝
+╔════════════════════════════════════════════════════════════════════════════════════════════╗
+║   PURE ARROW INGESTION BENCHMARK SUMMARY (no DuckDB)                                       ║
+╠══════════╦═══════════╦══════════════╦════════════════╦═══════════╦═════════╦══════════╣
+║  Type    ║  XML (MB) ║  Parse (ms)  ║ Peak Off-Heap  ║  Tx Rows  ║ MB/sec  ║Arrow(MB) ║
+╠══════════╬═══════════╬══════════════╬════════════════╬═══════════╬═════════╬══════════╣
+║  Type A  ║    734.4  ║      12,932  ║      463.0 MB  ║ 1,000,000 ║    56.8 ║   294.6  ║
+║  Type B  ║    734.3  ║      11,399  ║      463.0 MB  ║ 1,000,000 ║    64.4 ║   294.5  ║
+║  Type C  ║  1,295.1  ║      19,550  ║      791.3 MB  ║ 1,000,000 ║    66.2 ║   494.9  ║
+║  Type D  ║      0.1  ║           5  ║        1.7 MB  ║       200 ║    29.5 ║     0.1  ║
+║  Type E  ║      0.1  ║           5  ║        1.7 MB  ║       200 ║    29.5 ║     0.1  ║
+║  Type F  ║  1,469.8  ║      21,534  ║      896.1 MB  ║ 2,000,000 ║    68.3 ║   590.3  ║
+║  Type G  ║  2,940.7  ║      43,637  ║    1,791.2 MB  ║ 4,000,000 ║    67.4 ║ 1,181.7  ║
+╚══════════╩═══════════╩══════════════╩════════════════╩═══════════╩═════════╩══════════╝
 
-  XML (MB)     = source XML file size on disk
-  Parse (ms)   = StAX streaming parse + direct ArrowStreamWriter write (no DuckDB)
-  Tx Rows      = transaction rows ingested
-  MB/sec       = parse throughput (XML MB / parse seconds)
+  XML (MB)        = source XML file size on disk
+  Parse (ms)      = StAX streaming parse + direct ArrowStreamWriter write (no DuckDB)
+  Peak Off-Heap   = max Arrow allocator bytes while ALL ingested batches live in PureArrowInMemoryStore
+                    IMPORTANT: grows O(total_rows) — all batches are kept in memory until store.close()
+  Tx Rows         = transaction rows ingested
+  MB/sec          = parse throughput (XML MB / parse seconds)
+  Arrow (MB)      = combined size of the 3 exported .arrow files on disk
 ```
 
-> **Note:** These numbers are representative estimates based on the pipeline architecture.
-> Run `PureArrowIngestionBenchmarkTest` to get precise numbers for your hardware.
-
-**Key findings:**
-- Pure-Arrow ingest is **~4–5× faster** than the DuckDB pipeline for single-remittance types (A, B, F, G)
-- Type C (1M remittances) benefits most: ~9,441 ms vs 30,048 ms DuckDB (~3.2× speedup), because
-  the VectorUnloader batch path avoids 1M DuckDB INSERT calls
-- Peak off-heap stays ~31 MB for all large types — same bound as the DuckDB pipeline
+**Key findings — pure-Arrow pipeline:**
+- **Peak off-heap is NOT bounded** — it grows proportionally with total rows:
+  - Type A (1M tx): **463 MB** (≈ 16 batches × ~29 MB per batch)
+  - Type F (2M tx): **896 MB** (≈ 31 batches × ~29 MB)
+  - Type G (4M tx): **1,791 MB** (~1.75 GB — 4× allocator limit required)
+- This is fundamentally different from the DuckDB path which stays at ~31 MB regardless of file size
+- Parse speed is faster than DuckDB (see comparison below) because there is no SQL INSERT overhead
 
 ## `pgw-ingestor-pure-arrow` — Memory Leak Verification
 
@@ -203,53 +207,68 @@ pgw-ingestor-pure-arrow  :  12 tests — BUILD SUCCESS
 
 ---
 
----
-
 # DuckDB vs Pure-Arrow Pipeline Comparison (`PipelineComparisonBenchmarkTest`)
 
 This benchmark runs both pipelines back-to-back for each type and prints a side-by-side table.
 
-**DuckDB pipeline total** = Parse+Insert ms + Export ms  
+**DuckDB pipeline total** = Parse+Insert ms + Export ms
 **Pure-Arrow pipeline total** = Parse+Write ms (single step, no SQL engine)
 
-```
-╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
-║          PIPELINE COMPARISON — DuckDB  vs  Pure Arrow  (XML → .arrow files)                                         ║
-╠══════════╦══════════╦══════════════╦═══════════╦══════════════╦═══════════╦══════════════════╣
-║  Type    ║ XML (MB) ║ DuckDB total ║ DuckDB Pk ║ PureArrow ms ║  Tx Rows  ║   Speedup (×)    ║
-╠══════════╬══════════╬══════════════╬═══════════╬══════════════╬═══════════╬══════════════════╣
-║  Type A  ║   734.4  ║       16,421 ║   29.9 MB ║        3,421 ║ 1,000,000 ║         4.80×    ║
-║  Type B  ║   734.3  ║       14,746 ║   29.9 MB ║        3,389 ║ 1,000,000 ║         4.35×    ║
-║  Type C  ║ 1,295.1  ║       30,958 ║   49.7 MB ║        9,441 ║ 1,000,000 ║         3.28×    ║
-║  Type D  ║     0.1  ║           18 ║    1.7 MB ║            8 ║       200 ║         2.25×    ║
-║  Type E  ║     0.1  ║           19 ║    1.7 MB ║            7 ║       200 ║         2.71×    ║
-║  Type F  ║ 1,469.8  ║       30,677 ║   29.9 MB ║        6,831 ║ 2,000,000 ║         4.49×    ║
-║  Type G  ║ 2,940.7  ║       62,167 ║   29.9 MB ║       13,654 ║ 4,000,000 ║         4.55×    ║
-╚══════════╩══════════╩══════════════╩═══════════╩══════════════╩═══════════╩══════════════════╝
+Results from actual test run (2026-04-10, Java 25, `-Xmx4g`):
 
-  DuckDB total   = Parse+Insert ms + ArrowIpc.export() ms (full end-to-end DuckDB path)
-  DuckDB Pk      = peak Arrow allocator off-heap during DuckDB parse+insert phase
-  PureArrow ms   = StAX parse + PureArrowBatchConsumer + ArrowStreamWriter (end-to-end)
-  Speedup (×)    = DuckDB total / PureArrow total  (> 1.0× means pure-Arrow is faster)
 ```
+╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
+║          PIPELINE COMPARISON — DuckDB  vs  Pure Arrow  (XML → .arrow files)                                             ║
+╠══════════╦══════════╦══════════════╦═══════════╦═══════════════╦══════════════╦═══════════════╦═══════════╦════════════╣
+║  Type    ║ XML (MB) ║ DuckDB Prs+I ║ DuckDB Ex ║ DuckDB Peak   ║ PureArrow ms ║ PureArrow Pk  ║  Tx Rows  ║ Speedup(×) ║
+╠══════════╬══════════╬══════════════╬═══════════╬═══════════════╬══════════════╬═══════════════╬═══════════╬════════════╣
+║  Type A  ║   734.4  ║       16,582 ║       684 ║      29.9 MB  ║      12,252  ║     463.0 MB  ║ 1,000,000 ║     1.41×  ║
+║  Type B  ║   734.3  ║       12,021 ║       631 ║      29.9 MB  ║       8,585  ║     463.0 MB  ║ 1,000,000 ║     1.47×  ║
+║  Type C  ║ 1,295.1  ║       31,803 ║     1,022 ║      49.7 MB  ║      16,336  ║     791.3 MB  ║ 1,000,000 ║     2.01×  ║
+║  Type D  ║     0.1  ║           10 ║         5 ║       1.7 MB  ║           4  ║       1.7 MB  ║       200 ║     3.75×  ║
+║  Type E  ║     0.1  ║            9 ║         5 ║       1.7 MB  ║           4  ║       1.7 MB  ║       200 ║     3.50×  ║
+║  Type F  ║ 1,469.8  ║       27,652 ║     1,185 ║      29.9 MB  ║      17,710  ║     896.1 MB  ║ 2,000,000 ║     1.63×  ║
+║  Type G  ║ 2,940.7  ║       58,027 ║     2,504 ║      29.9 MB  ║      36,047  ║   1,791.2 MB  ║ 4,000,000 ║     1.68×  ║
+╚══════════╩══════════╩══════════════╩═══════════╩═══════════════╩══════════════╩═══════════════╩═══════════╩════════════╝
 
-> **Note:** These numbers are representative estimates. Run `PipelineComparisonBenchmarkTest`
-> to get precise numbers for your hardware.
+  DuckDB Prs+I   = StAX streaming parse + StreamingBatchConsumer INSERT into DuckDB (ms)
+  DuckDB Ex      = ArrowIpc.export() for all 3 tables via C Data Interface (ms)
+  DuckDB Peak    = peak Arrow off-heap during parse+insert (1 batch at a time → bounded ~30–50 MB)
+  PureArrow ms   = StAX parse + PureArrowBatchConsumer + ArrowStreamWriter (ms)
+  PureArrow Pk   = peak Arrow off-heap (ALL batches accumulated in store → O(total_rows))
+  Speedup (×)    = DuckDB total (parse+insert+export) / PureArrow total (parse+write)
+```
 
 **Analysis:**
-- ⚡ **Pure Arrow is ~3–5× faster end-to-end** for all types
-- Both pipelines produce **identical row counts** and **equivalent Arrow IPC files** on disk
-- The speedup is largest for fat-batch types (A, B, F, G): ~4.3–4.8× because
-  DuckDB INSERT overhead dominates and there are fewer, larger batches per parse pass
-- Type C has the smallest speedup (~3.3×) because the VectorUnloader path also incurs
-  per-batch overhead (1M batches of 1 row each)
-- Peak off-heap is identical for both pipelines (~31 MB for large types) — the streaming
-  architecture bounds memory regardless of pipeline choice
-- **Conclusion:** Use Pure-Arrow pipeline (`pgw-ingestor-pure-arrow`) when you only need
-  Arrow IPC files and don't require DuckDB at ingest time. Use DuckDB pipeline when you
-  need live SQL queries on the ingested data during or immediately after parse.
 
----
+| Dimension | DuckDB Pipeline | Pure-Arrow Pipeline |
+|-----------|----------------|---------------------|
+| **Parse speed** (A/B, 1M rows) | ~17,500 ms total | ~12,252 ms (**1.4×** faster) |
+| **Parse speed** (C, 1M×1 rows) | ~32,825 ms total | ~16,336 ms (**2×** faster) |
+| **Parse speed** (F, 2M rows) | ~28,837 ms total | ~17,710 ms (**1.6×** faster) |
+| **Parse speed** (G, 4M rows) | ~60,531 ms total | ~36,047 ms (**1.7×** faster) |
+| **Peak off-heap** (A, 1M rows) | **~30 MB** (bounded — 1 batch) | **~463 MB** (all batches in store) |
+| **Peak off-heap** (F, 2M rows) | **~30 MB** (bounded) | **~896 MB** |
+| **Peak off-heap** (G, 4M rows) | **~30 MB** (bounded) | **~1,791 MB** |
+| **Arrow file output** | Same size (same schema) | Same size |
+| **SQL queries at ingest** | ✅ Available immediately | ❌ Not available |
+| **Pod memory budget** | Low: ~31 MB Arrow + DuckDB RSS | High: grows O(total_rows) |
+
+**Key trade-offs:**
+
+⚡ **Pure-Arrow is faster at ingest** because there is no DuckDB INSERT overhead (SQL engine
+receives, processes, and indexes each batch). This advantage is ~1.4–2× for typical types.
+
+⚠️ **Pure-Arrow uses far more off-heap memory** because all `ArrowRecordBatch` objects are
+kept in `PureArrowInMemoryStore` until `store.close()`. For 4M rows the store holds
+~1.75 GB of Arrow off-heap. The DuckDB pipeline keeps only 1 batch (~30 MB) in Arrow memory
+at any time.
+
+**When to choose each pipeline:**
+- **DuckDB pipeline** → when downstream SQL analytics on the ingested data are needed, or when
+  memory is constrained (pods with < 512 MB headroom over DuckDB RSS)
+- **Pure-Arrow pipeline** → when only `.arrow` IPC files are needed (e.g. write and hand off),
+  memory is ample (>= 500 MB per 1M rows), and maximum ingest throughput matters
 
 ---
 
@@ -261,21 +280,12 @@ then run the chainable SQL validation pipeline. Owns all domain (model, VOs, DAL
 ## How to Run `pgw-validator` Tests
 
 ```bash
-# All validator tests
 MAVEN_OPTS="--add-opens=java.base/java.nio=ALL-UNNAMED -Xmx4g" \
   mvn test -pl pgw-validator
 
-# Domain validation correctness only (fast, no file generation)
+# Domain validation correctness only (fast)
 MAVEN_OPTS="--add-opens=java.base/java.nio=ALL-UNNAMED" \
   mvn test -pl pgw-validator -Dtest=ValidationTest
-
-# Arrow → DuckDB load benchmark only
-MAVEN_OPTS="--add-opens=java.base/java.nio=ALL-UNNAMED -Xmx4g" \
-  mvn test -pl pgw-validator -Dtest=ArrowFileLoadBenchmarkTest
-
-# Validation-stage benchmark (DuckDB load + SQL validation, separated timings)
-MAVEN_OPTS="--add-opens=java.base/java.nio=ALL-UNNAMED -Xmx4g" \
-  mvn test -pl pgw-validator -Dtest=ValidationBenchmarkTest
 ```
 
 ## `pgw-validator` Test Classes
@@ -297,65 +307,6 @@ MAVEN_OPTS="--add-opens=java.base/java.nio=ALL-UNNAMED -Xmx4g" \
 pgw-validator :   4 tests — BUILD SUCCESS
 ```
 
-## `pgw-validator` — Arrow File → DuckDB Load Benchmark (`ArrowFileLoadBenchmarkTest`)
-
-**Path:** pre-exported `.arrow` files → `ArrowIpc.load()` → DuckDB `CREATE TABLE AS SELECT`
-
-```
-╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
-║           Arrow File -> DuckDB Load Benchmark - All Types (Downstream Consumer Simulation)                                   ║
-╠══════════╦═══════════╦═══════════╦════════════╦═══════════╦════════════╦════════════════╦══════════════╦═════════════╣
-║  Type    ║  Msg KB   ║  Rmt KB   ║  Tx KB     ║ Total KB  ║ Load (ms)  ║ Peak Off-Heap  ║  Rows/sec    ║  Tx Rows    ║
-╠══════════╬═══════════╬═══════════╬════════════╬═══════════╬════════════╬════════════════╬══════════════╬═════════════╣
-║  Type A   ║         0 ║         2 ║    301,709 ║   301,712 ║        635 ║    121,576,854 ║    1,574,804 ║   1,000,000 ║
-║  Type B   ║         0 ║         2 ║    301,600 ║   301,604 ║        636 ║    121,541,462 ║    1,572,330 ║   1,000,000 ║
-║  Type C   ║         0 ║   205,125 ║    301,654 ║   506,780 ║      1,291 ║    121,511,222 ║    1,549,186 ║   1,000,000 ║
-║  Type D   ║         0 ║         2 ║         61 ║        65 ║         17 ║         70,486 ║       11,882 ║         200 ║
-║  Type E   ║         0 ║         2 ║         61 ║        65 ║         15 ║         70,486 ║       13,466 ║         200 ║
-║  Type F   ║         0 ║         2 ║    604,501 ║   604,504 ║      1,255 ║    121,904,534 ║    1,593,626 ║   2,000,000 ║
-║  Type G   ║         0 ║         2 ║  1,210,086 ║ 1,210,090 ║      2,129 ║    121,904,574 ║    1,878,816 ║   4,000,000 ║
-╚══════════╩═══════════╩═══════════╩════════════╩═══════════╩════════════╩════════════════╩══════════════╩═════════════╝
-
-  Peak Off-Heap = Arrow allocator peak off-heap bytes during ArrowIpc.load (ArrowStreamReader batches)
-```
-
-- Downstream consumers load **1M rows from Arrow IPC files in 635–1,291 ms** and **4M rows in 2,129 ms**
-- **Type F (2M rows)** loads in 1,255 ms; **Type G (4M rows)** loads in 2,129 ms — near-linear
-- Peak off-heap ~121–122 MB for large types (one batch of 65k rows per table)
-
-## `pgw-validator` — Validation Benchmark (`ValidationBenchmarkTest`)
-
-**Path:** `.arrow` files → `ArrowIpc.load()` → DuckDB → `ValidationPipeline.standard()` + `StreamingTransactionIteratorValidator`
-
-```
-╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
-║         Validation Stage Benchmark — Arrow File → DuckDB Load + SQL Validation                                              ║
-╠══════════╦════════════╦══════════════╦══════════════╦════════════════╦═══════════╦══════════════╦═══════════╣
-║  Type    ║ Arrow (KB) ║ DuckDB ms    ║ Validate ms  ║ Peak Off-Heap  ║  Tx Rows  ║ rows/ms (val)║  Result   ║
-╠══════════╬════════════╬══════════════╬══════════════╬════════════════╬═══════════╬══════════════╬═══════════╣
-║  Type A   ║    301,712 ║          768 ║           80 ║    121,576,862 ║ 1,000,000 ║       12,500 ║ ✓ PASSED  ║
-║  Type B   ║    301,604 ║          728 ║           82 ║    121,465,798 ║ 1,000,000 ║       12,195 ║ ✓ PASSED  ║
-║  Type C   ║    506,780 ║        1,336 ║          329 ║    121,511,222 ║ 1,000,000 ║        3,040 ║ ✓ PASSED  ║
-║  Type D   ║         65 ║           15 ║            7 ║         70,486 ║       200 ║           29 ║ ✓ PASSED  ║
-║  Type E   ║         65 ║           14 ║           11 ║         70,486 ║       200 ║           18 ║ ✗ 3 err   ║
-║  Type F   ║    604,504 ║        1,287 ║          128 ║    121,576,862 ║ 2,000,000 ║       15,625 ║ ✓ PASSED  ║
-║  Type G   ║  1,210,090 ║        1,899 ║          250 ║    121,970,078 ║ 4,000,000 ║       16,000 ║ ✓ PASSED  ║
-╠══════════╬════════════╬══════════════╬══════════════╬════════════════╬═══════════╬══════════════╬═══════════╣
-║  TOTAL    ║  2,924,820 ║        6,047 ║          887 ║    121,970,078 ║ 9,000,400 ║       10,147 ║ —         ║
-╚══════════╩════════════╩══════════════╩══════════════╩════════════════╩═══════════╩══════════════╩═══════════╝
-
-  DuckDB ms      = time for ArrowIpc.load() per file
-  Validate ms    = time for ValidationPipeline.standard() — SQL validators in parallel virtual threads
-  Peak Off-Heap  = Arrow allocator peak off-heap bytes during ArrowIpc.load phase
-  rows/ms (val)  = transaction row scan throughput during SQL validation
-```
-
-- **TOTAL: 6,047 ms load + 887 ms SQL validation** across 9,000,400 rows (7 types)
-- **Type G (4M rows):** loads in 1,899 ms, validates in 250 ms (16,000 rows/ms)
-- Type E correctly reports **3 control-sum errors** (2 remittance-level + 1 message-level)
-
----
-
 ---
 
 # Full Test Run Summary
@@ -364,14 +315,14 @@ pgw-validator :   4 tests — BUILD SUCCESS
 ══════════════════════════════════════════════════════════════
   pgw-common
 ══════════════════════════════════════════════════════════════
-  TestFileGenerator          :  2 tests — PASS  (generates Types D + E on first run)
+  TestFileGenerator          :  2 tests — PASS
   ─────────────────────────────────────────────
   Subtotal                   :  2 tests — BUILD SUCCESS
 
 ══════════════════════════════════════════════════════════════
   pgw-domain
 ══════════════════════════════════════════════════════════════
-  (no tests — pure domain module)
+  (no tests — pure domain model module)
   ─────────────────────────────────────────────
   Subtotal                   :  0 tests — BUILD SUCCESS
 
@@ -379,20 +330,20 @@ pgw-validator :   4 tests — BUILD SUCCESS
   pgw-ingestor
 ══════════════════════════════════════════════════════════════
   ParsePipelineTest          :  4 tests — PASS
-  StreamingPipelineTest      :  4 tests — PASS  (ArrowIpc export + load round-trip)
+  StreamingPipelineTest      :  4 tests — PASS
   MemoryLeakVerificationTest :  3 tests — PASS  (103 iterations, 0 bytes leaked)
-  IngestionBenchmarkTest     :  1 test  — PASS  (Types A–G, peak ~52 MB off-heap, 4M rows in ~60s)
+  IngestionBenchmarkTest     :  1 test  — PASS  (Types A–G, peak ~31–52 MB DuckDB off-heap)
   ─────────────────────────────────────────────
   Subtotal                   : 12 tests — BUILD SUCCESS
 
 ══════════════════════════════════════════════════════════════
   pgw-ingestor-pure-arrow
 ══════════════════════════════════════════════════════════════
-  PureArrowParsePipelineTest        :  5 tests — PASS  (Types D + E correctness)
-  PureArrowStreamingPipelineTest    :  3 tests — PASS  (memory footprint, row counts)
+  PureArrowParsePipelineTest        :  5 tests — PASS
+  PureArrowStreamingPipelineTest    :  3 tests — PASS
   PureArrowMemoryLeakVerificationTest: 2 tests — PASS  (100 iterations, 0 bytes leaked)
-  PureArrowIngestionBenchmarkTest   :  1 test  — PASS  (Types A–G, no DuckDB)
-  PipelineComparisonBenchmarkTest   :  1 test  — PASS  (DuckDB vs Pure Arrow, ~3–5× speedup)
+  PureArrowIngestionBenchmarkTest   :  1 test  — PASS  (Types A–G, peak 463 MB–1.8 GB off-heap)
+  PipelineComparisonBenchmarkTest   :  1 test  — PASS  (DuckDB vs Pure Arrow, 1.4–3.8× speedup)
   ─────────────────────────────────────────────
   Subtotal                          : 12 tests — BUILD SUCCESS
 
@@ -400,8 +351,8 @@ pgw-validator :   4 tests — BUILD SUCCESS
   pgw-validator
 ══════════════════════════════════════════════════════════════
   ValidationTest             :  2 tests — PASS  (Type D passes, Type E fails correctly)
-  ArrowFileLoadBenchmarkTest :  1 test  — PASS  (4M rows loaded in 2,129 ms, peak ~122 MB)
-  ValidationBenchmarkTest    :  1 test  — PASS  (load 6,047 ms + validate 887 ms, 9M rows)
+  ArrowFileLoadBenchmarkTest :  1 test  — PASS
+  ValidationBenchmarkTest    :  1 test  — PASS
   ─────────────────────────────────────────────
   Subtotal                   :  4 tests — BUILD SUCCESS
 
@@ -409,3 +360,5 @@ pgw-validator :   4 tests — BUILD SUCCESS
   TOTAL                      : 30 tests — BUILD SUCCESS
 ══════════════════════════════════════════════════════════════
 ```
+
+**All 30 tests pass. Benchmark data above is from actual test runs on 2026-04-10 (Java 25, -Xmx4g).**
